# lungvolseg

./: .gitignore  README.md  pyproject.toml  report.md  requirements.txt
code/: README.md
code/lungnav/: training.py
code/lungvolseg/: __init__.py  airway.py  inference.py  metrics.py  model.py  model_card.py
code/scripts/: airway_centerlines.py  run_zenodo_lung_pipeline.py
docs/: index.html
docs/assets/: site.css
docs/assets/results/: metrics_full_e25.json  summary.json  training_summary_full_e25.json
scripts/: airway_route.py  airway_visualize.py  bootstrap_demo_data.py  build_results_site_assets.py  download_real_medseg.py  download_zenodo_lung.py  extract_meshes.py  infer_segmentation.py  preprocess_ct.py  run_pipeline.py  run_real_medseg_pipeline.py  run_zenodo_lung_pipeline.py  train_segmentation.py  validate_and_card.py
src/lungnav/: __init__.py  config.py  inference.py  mesh.py  metrics.py  model_card.py  pipeline.py  preprocess.py  real_medseg.py  synthetic.py  training.py
src/lungvolseg/: airway.py  inference.py  metrics.py  model_card.py  runtime.py  training.py  zenodo_covid_lung.py
tests/: test_validation.py
