[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lungnav"
version = "0.1.0"
description = "Small lung CT navigation-prep pipeline with SimpleITK, MONAI, and VTK."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "SimpleITK>=2.3",
  "torch>=2.4",
  "monai>=1.5",
  "vtk>=9.2",
  "nibabel>=5.0",
  "matplotlib>=3.8",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
